[package]
name = "lu_packets"
version = "0.2.0"
authors = ["lcdr"]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jadebenn/lu_packets/"

[dependencies]
endio = { git = "https://github.com/jadebenn/endio" }
endio_bit = { git = "https://github.com/jadebenn/endio_bit" }
lu_packets_derive = { path = "lu_packets_derive" }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }

[dev-dependencies]
libsqlite3-sys = { version = "0.20.1", features = ["bundled"] }
rusqlite = "0.24.2"
zip = "0.6.3"

[lints.clippy]
pedantic = "warn"
