[package]
name = "lu_packets"
version = "0.2.0"
authors = ["lcdr"]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/jadebenn/lu_packets/"

[dependencies]
endio = { git = "https://github.com/jadebenn/endio" }
endio_bit = { git = "https://github.com/jadebenn/endio_bit" }
lu_packets_derive = { path = "lu_packets_derive" }
flate2 = { version = "1.1.2", features = ["zlib"], default-features = false }
enum_discriminant = "1.0.1"

[dev-dependencies]
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
rusqlite = "0.37.0"
zip = "0.6.3" # TODO: UPGRADE

[lints.clippy]
pedantic = "warn"
